--- a/index/index.html
+++ b/index/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../html/css/estilos_index.css">
+    <link rel="icon" href="imagenes/favicon.ico">
+    <link rel="stylesheet" href="css/estilos_index.css">
     <title>Autoescuela los monos</title>
 </head>
 <body>
-    <div><img src="../html/imagenes/index_imagen.png" alt=""></div>
+    <header><img src="imagenes/index_imagen.png" alt=""></header>
     <form action="" method="post">
         <label for="html">Usuario/email</label><br>
         <input type="text" name="InId"><br>
 
         <label for="html">Contraseña</label><br>
         <input type="password" name="InPassw"><br>
-
+        <p> </p>
         <input type="submit" value="aceptar" name="BotonAceptar">
     </form>
-    <p> </p>
-
+    
+    <footer>
         <a href="">¿Has olvidado tu constraseña?</a>
-        <p> </p>
-        <a href="alta_usuario/alta_usuario_index/alta_usuario_index.html">Crear cuenta de usuario</a>
+    </footer>
 </body>
 </html>
