--- a/Pagina_principal/Pagina_principaal.html
+++ b/Pagina_principal/Pagina_principaal.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="favicon" href="imagenes/favicon.ico">
     <title>Inicio</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
                 <li class="categoria">
                     <a href="">Usuarios</a>
                     <ul class="submenu">
-                        <li><a href="">Alta de usuario</a></li>
+                        <li><a href="../alta_usuario/alta_usuario/alta_usuario_index.html">Alta de usuario</a></li>
                         <li><a href="">Alta masiva de usuario</a></li>
                     </ul>
                 </li>
