--- a/html/index/index.html
+++ b/html/index/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../../scss/main.css">
     <title>Autoescuela los monos</title>
 </head>
 <body>
     <header><img src="imagenes/index_imagen.png" alt="Imagen de presentacion"></header>
-    <form action="../clases/Login.php" method="post">
+    <form action="../../php/Login/Login.php" method="post">
         <label for="html">Usuario/email</label><br>
         <input type="text" id="InId" name="InId"><br>
 
