--- a/html/password_olvidada/recupera_passsw.html
+++ b/html/password_olvidada/recupera_passsw.html
@@ -7,7 +7,7 @@
 
     <link rel="favicon" href="imagenes/favicon.ico">
 
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../../scss/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
     <title>Recuperar contraseña</title>
 </head>
 <body>
-    <form action="../clases/recuperar.php" method="post">
+    <form action="../../php/mandarEmail/RecuperarPassword.php" method="post">
         <label for="html">Introduzca Email:</label><br>
         <input type="text" name="InCorreo"><br>
         <input type="submit" name="BoEnviar" >
