--- a/html/Pagina_principal/Pagina_principal.html
+++ b/html/Pagina_principal/Pagina_principal.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../scss/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <link rel="favicon" href="imagenes/favicon.ico">
+    <link rel="icon" href="../../recursos/imagenes/favicon.ico">
+    
     <title>Inicio</title>
 </head>
 <body>
     <header>
-        <img class="izquierda" src="imagenes/Imagen_pagina (2).jpg" height="200px">
+        <img class="izquierda" src="../../recursos/imagenes/Imagen_pagina (2).jpg" height="200px">
         <h1 class="titulo">Autoescuela Los Monos</h1>
         <br>
     </header>
