--- a/html/alta_usuario/alta_usuario/alta_usuario_index.html
+++ b/html/alta_usuario/alta_usuario/alta_usuario_index.html
@@ -10,10 +10,41 @@
 </head>
 <body>
     <header>
-        <img class="izquierda" src="../../../recursos/imagenes/Imagen_alta_usuario.png" height="200px">
+        <img class="izquierda" src="../../../recursos/imagenes/Imagen_header.png" height="200px">
         <h1 class="titulo">Autoescuela Los Monos</h1>
         <br>
     </header>
+    <nav>
+        <ul>
+            <li class="categoria">
+                <a href="../../usuarios/Registros_usuarios.html">Usuarios</a>
+                <ul class="submenu">
+                    <li><a href="../alta_usuario/alta_usuario/alta_usuario_index.html">Alta de usuario</a></li>
+                    <li><a href="">Alta masiva de usuario</a></li>
+                </ul>
+            </li>
+            <li class="categoria">
+                <a href="">Temáticas</a> 
+                <ul class="submenu">
+                    <li><a href="">Alta de temática</a></li>
+                </ul>
+            </li>
+            <li class="categoria">
+                <a href="">Preguntas</a>
+                <ul class="submenu">
+                    <li><a href="">Alta de pregunta</a></li>
+                    <li><a href="">Alta masiva de usuario</a></li>
+                </ul>
+            </li>
+            <li class="categoria">
+                <a href="">Exámenes</a>
+                <ul class="submenu">
+                    <li><a href="">Alta de Exámen</a></li>
+                    <li><a href="">Historial de exámenes</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
     <form action="" method="post" id="form1">
         <span id="notificacion"></span><br>
         <p> </p>
