--- a/html/password_olvidada/recupera_passsw.html
+++ b/html/password_olvidada/recupera_passsw.html
@@ -9,17 +9,19 @@
 
     <link rel="stylesheet" href="../../scss/main.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <script src="../../Js/AjaxPasswordOlvidada.js"></script>
 
     <title>Recuperar contraseña</title>
 </head>
 <body>
-    <form action="../../php/mandarEmail/RecuperarPassword.php" method="post">
+    <form action="" method="">
+        <br>
+        <span id="corrector"></span>
+        <br>
+
         <label for="html">Introduzca Email:</label><br>
-        <input type="text" name="InCorreo"><br>
-        <input type="submit" name="BoEnviar" >
+        <input type="text" id="InCorreo"><br>
+        <input type="submit" id="BoEnviar">
     </form>
 </body>
 </html>
