--- a/html/confirmar_usuario/confirmar_usuario.html
+++ b/html/confirmar_usuario/confirmar_usuario.html
@@ -7,6 +7,7 @@
     <script src="../../Js/AjaxConfirmaUsuario.js"></script>
     <link rel="icon" href="../../recursos/imagenes/favicon.ico">
     <link rel="stylesheet" href="../../scss/main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Confirmar usuario</title>
 </head>
 <body>
